1.1.1 -> 1.1.2

- Fixed typos in onboarding tour (resolved #21)


1.1.0 -> 1.1.1

- Fixed autocompletion being triggered at inappropriate times (resolved #18)


1.0.0 -> 1.1.0

- Improved memory views logic (resolved #11)
- Improved icons (now only use Material 2 Round)
- Improved ExecutionWorker readability
- Added quick access to symbol address in memory (resolved #9)
- Added option to only simulate current file (resolved #13)
- Added onboarding tour (resolved #8)
- Fixed preloader centering (resolved #7)
- Fixed program being editable during simulation (resolved #12)
- Fixed smart highlighter confusion between B/BL with condition LE (resolved #10)


0.2.2 -> 1.0.0

- Added instruction code in memory
- Added instruction list (documentation)
- Added instruction/RO memory protection against overwriting
- Removed the legacy source parser
- Improved readability in memory views
- Improved tabulation insertion/deletion
- Improved settings UI
- Fixed memory edition in GUI
- Fixed CPSR/SPSR being usable as common registers
- Fixed broken shift argument (with register)
- Fixed broken shift highlighting/autocompletion
- Fixed incorrect pre-/post-indexing behaviour, syntax and highlighting
- Fixed incorrect syntax of 'label' arguments
- Fixed incorrect instruction memory position when fetching from StateInitializer (instruction comparison)
- Fixed LDM and STM default update mode
- Fixed instruction modifier order (data mode, store mode, update flags etc)
- Fixed MOV behaviour
- Fixed shift on immediate highlighting
- Fixed line number highlighting when looping over 2 addresses
- Fixed stuck UI when executing with minimum simulation interval
- Fixed undetected catch point by BX instruction
- Fixed value update highlighting
- Fixed unsaved dialog triggering
- Fixed CMN wrongly transformed into CMP
- Fixed autocompletion triggered when using Find & Replace
- Fixed shifted MOV to SHIFT conversion
- Fixed RegisterAddress highlighting


0.2.1 -> 0.2.2
